--- a/_columns/The_Big_Picture/zh-cn/2024-11-19.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-19.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stocks Extend Bounce As Investors Hold Tight Ahead Of Nvidia Earnings; This Index Trounces Market	由于投资者在 Nvidia 财报发布前紧紧持有，股市延续反弹;该指数冲击市场
+  Stocks Extend Bounce As Investors Hold Tight Ahead Of Nvidia Earnings; This Index Trounces Market
 date: 2024-11-19 17:18 -0800
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,98 +10,98 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The stock market's rebound continued as most major indexes climbed Tuesday. And while the Dow Jones Industrial Average lagged, the IBD 50 blew by the rest of the market.  
+The stock market's rebound continued as most major indexes climbed Tuesday. And while the Dow Jones Industrial Average lagged, the IBD 50 blew by the rest of the market.
 
 
-Stocks opened weaker, as Wall Street appeared to be shaken by an [escalation in the Russia-Ukraine conflict](https://www.investors.com/news/putin-russia-nuclear-doctrine-defense-stocks-u-s-ukraine-long-range-missiles/) that saw deeper U.S. participation. Investors pivoted to Treasury bonds and gold. But almost immediately after the opening bell, stock market indexes started paring losses. By the first hour of trading, the Nasdaq was in the black.  
+Stocks opened weaker, as Wall Street appeared to be shaken by an [escalation in the Russia-Ukraine conflict](https://www.investors.com/news/putin-russia-nuclear-doctrine-defense-stocks-u-s-ukraine-long-range-missiles/) that saw deeper U.S. participation. Investors pivoted to Treasury bonds and gold. But almost immediately after the opening bell, stock market indexes started paring losses. By the first hour of trading, the Nasdaq was in the black.
 
 
 
 
-At the close, the Nasdaq led the main indexes with a gain of 1% and the S&P 500 added 0.4%. Both indexes again held at their 21-day exponential moving averages.  
+At the close, the Nasdaq led the main indexes with a gain of 1% and the S&P 500 added 0.4%. Both indexes again held at their 21-day exponential moving averages.
 
 
-But the Dow fell 0.3%, despite that **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) climbed to a record high after the retailer [beat October-quarter estimates](https://www.investors.com/news/walmart-earnings-q3-walmart-stock-trump-win-inflation/?_gl=1*9ofnn3*_gcl_au*Mjg1ODY3MzE5LjE3MjcwNTY4MDM.*_ga*MTEzNDE0NDY2OC4xNzMyMDIyNTI1*_ga_K2H7B9JRSS*MTczMjA0NTU3OS41LjEuMTczMjA0NjI4NC41Ny4wLjA.). The Dow, however, trimmed losses and closed above its 21-day exponential moving average.  
+But the Dow fell 0.3%, despite that **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) climbed to a record high after the retailer [beat October-quarter estimates](https://www.investors.com/news/walmart-earnings-q3-walmart-stock-trump-win-inflation/?_gl=1*9ofnn3*_gcl_au*Mjg1ODY3MzE5LjE3MjcwNTY4MDM.*_ga*MTEzNDE0NDY2OC4xNzMyMDIyNTI1*_ga_K2H7B9JRSS*MTczMjA0NTU3OS41LjEuMTczMjA0NjI4NC41Ny4wLjA.). The Dow, however, trimmed losses and closed above its 21-day exponential moving average.
 
 
-Volume rose on the New York Stock Exchange and fell on the Nasdaq from Monday's totals.  
+Volume rose on the New York Stock Exchange and fell on the Nasdaq from Monday's totals.
 
 
-The 10-year Treasury yield fell nearly four basis points to 4.378% but that was well off morning lows. The benchmark yield is at a Nov. 8 low, which growth investors and rate-sensitive stocks would welcome. Real estate, utilities and technology sectors climbed 0.4% to 0.8% Tuesday. Consumer discretionary, consumer staples and communications services were other S&P 500 indexes that rose, and the other five fell.  
+The 10-year Treasury yield fell nearly four basis points to 4.378% but that was well off morning lows. The benchmark yield is at a Nov. 8 low, which growth investors and rate-sensitive stocks would welcome. Real estate, utilities and technology sectors climbed 0.4% to 0.8% Tuesday. Consumer discretionary, consumer staples and communications services were other S&P 500 indexes that rose, and the other five fell.
 
 
-![market pulse](https://www.investors.com/wp-content/uploads/2024/11/MP111924.jpg)Gold for November delivery rose 0.6% to $2,627.10 per ounce. West Texas Intermediate crude oil edged up 0.3% to $69.39 per barrel.  
+![market pulse](https://www.investors.com/wp-content/uploads/2024/11/MP111924.jpg)Gold for November delivery rose 0.6% to $2,627.10 per ounce. West Texas Intermediate crude oil edged up 0.3% to $69.39 per barrel.
 
 
-The IBD 50 surged 3%, easily outperforming the broad market. The growth-stock index found support at its 21-day line and is back above the Oct. 21 high at 423.25. Its tracking exchange traded fund, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)), rose 4% to regain a 29.15 buy point.  
+The IBD 50 surged 3%, easily outperforming the broad market. The growth-stock index found support at its 21-day line and is back above the Oct. 21 high at 423.25. Its tracking exchange traded fund, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)), rose 4% to regain a 29.15 buy point.
 
 
-**Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) gave the IBD 50 its biggest boost. The homeowners' insurance provider jumped 17%. **Vertiv** ([VRT](https://research.investors.com/quote.aspx?symbol=VRT)) surged more than 14% after the data center infrastructure company gave [a bullish investor presentation](https://www.investors.com/news/technology/vertiv-stock-vrt-rises-after-investor-event/). The volatile **Hims & Hers Health** ([HIMS](https://research.investors.com/quote.aspx?symbol=HIMS)) vaulted 12% after a former Food and Drug Administration official joined the company's board.  
+**Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) gave the IBD 50 its biggest boost. The homeowners' insurance provider jumped 17%. **Vertiv** ([VRT](https://research.investors.com/quote.aspx?symbol=VRT)) surged more than 14% after the data center infrastructure company gave [a bullish investor presentation](https://www.investors.com/news/technology/vertiv-stock-vrt-rises-after-investor-event/). The volatile **Hims & Hers Health** ([HIMS](https://research.investors.com/quote.aspx?symbol=HIMS)) vaulted 12% after a former Food and Drug Administration official joined the company's board.
 
 
 Small Caps, Midcap Hold Significant Level
 -----------------------------------------
 
 
-Smaller stocks stood their ground. The Russell 2000 reversed higher after testing the mid-October highs around 2,290. The index reversed higher 0.8%. The S&P MidCap 400 ([MDY](https://research.investors.com/quote.aspx?symbol=MDY)) made a similar bullish reversal around the 3,200 level, and closed 0.1% higher.  
+Smaller stocks stood their ground. The Russell 2000 reversed higher after testing the mid-October highs around 2,290. The index reversed higher 0.8%. The S&P MidCap 400 ([MDY](https://research.investors.com/quote.aspx?symbol=MDY)) made a similar bullish reversal around the 3,200 level, and closed 0.1% higher.
 
 
-It will be important for both indexes to follow through on those reversals by adding gains this week.  
+It will be important for both indexes to follow through on those reversals by adding gains this week.
 
 
-A few leading stocks that had erased gains from November breakouts, such as **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), rebounded back above their buy points, too.  
+A few leading stocks that had erased gains from November breakouts, such as **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), rebounded back above their buy points, too.
 
 
-The S&P 500 shed its Oct. 15 distribution day, now that 25 sessions have passed since that date. That leaves the S&P with two [distribution days](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) and the Nasdaq with just one. That's a positive sign.  
+The S&P 500 shed its Oct. 15 distribution day, now that 25 sessions have passed since that date. That leaves the S&P with two [distribution days](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) and the Nasdaq with just one. That's a positive sign.
 
 
-Advancing stocks topped decliners by 9-7 on the Nasdaq, but losers edged out winners on the NYSE, according to FactSet.  
+Advancing stocks topped decliners by 9-7 on the Nasdaq, but losers edged out winners on the NYSE, according to FactSet.
 
 
-Market breadth measures have been mixed.  
+Market breadth measures have been mixed.
 
 
-The number of [52-week highs](https://www.investors.com/data-tables/new-high-list-nov-18-2024/) and the number of stocks up in volume vs. down in volume are at bullish levels. But the NYSE and Nasdaq advance-declines lines are below their 10-day moving averages, and the Nasdaq's line remains in a gentle downtrend.  
+The number of [52-week highs](https://www.investors.com/data-tables/new-high-list-nov-18-2024/) and the number of stocks up in volume vs. down in volume are at bullish levels. But the NYSE and Nasdaq advance-declines lines are below their 10-day moving averages, and the Nasdaq's line remains in a gentle downtrend.
 
 
-Direxion Nasdaq 100 Equal Weight ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) found support at its 50-day line. It climbed 0.3%. Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) fell 0.3%.  
+Direxion Nasdaq 100 Equal Weight ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) found support at its 50-day line. It climbed 0.3%. Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) fell 0.3%.
 
 
 Stock Market Faces Nvidia Earnings
 ----------------------------------
 
 
-The stock market showed fortitude as it prepared for a major earnings report after Wednesday's close from **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)).  
+The stock market showed fortitude as it prepared for a major earnings report after Wednesday's close from **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)).
 
 
-Along with the report comes the stock market's hopes for a continued artificial intelligence boom. Nvidia is arguably the most important AI enterprise, so the financial results and executive comments act as an important lever for the AI trade. And, oh by the way, Nvidia is also the biggest stock by market cap, now exceeding $3.601 trillion. Shares rose 4.5% Tuesday.  
+Along with the report comes the stock market's hopes for a continued artificial intelligence boom. Nvidia is arguably the most important AI enterprise, so the financial results and executive comments act as an important lever for the AI trade. And, oh by the way, Nvidia is also the biggest stock by market cap, now exceeding $3.601 trillion. Shares rose 4.5% Tuesday.
 
 
-In economic news, U.S. housing starts fell 3.1% in October to 1.3 million at an annualized rate, a larger drop than expected. Construction activity in the South dropped 8.8% — likely impacted by hurricanes, Priscilla Thiagamoorthy, senior economist at BMO Capital Markets, said in an analysis. Building permits, a proxy for future home construction, edged down 0.6% to a 1.42 million annual rate.  
+In economic news, U.S. housing starts fell 3.1% in October to 1.3 million at an annualized rate, a larger drop than expected. Construction activity in the South dropped 8.8% — likely impacted by hurricanes, Priscilla Thiagamoorthy, senior economist at BMO Capital Markets, said in an analysis. Building permits, a proxy for future home construction, edged down 0.6% to a 1.42 million annual rate.
 
 
-"We're expecting residential construction to contract again in Q4," Thiagamoorthy added. "The supply problem will keep the housing market in a soft patch for some time."  
+"We're expecting residential construction to contract again in Q4," Thiagamoorthy added. "The supply problem will keep the housing market in a soft patch for some time."
 
 
-The iShares U.S. Home Construction ETF ([ITB](https://research.investors.com/quote.aspx?symbol=ITB)) eased 0.2%.  
+The iShares U.S. Home Construction ETF ([ITB](https://research.investors.com/quote.aspx?symbol=ITB)) eased 0.2%.
 
 
-[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111924.pdf) 
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111924.pdf)
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE:**
 
 
-[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/) 
+[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
 
 
-[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
+[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A) 
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Futures: Nvidia Due With AI Giant Back In Buy Zone](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-target/) 
+[Futures: Nvidia Due With AI Giant Back In Buy Zone](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-target/)
 
 
 
