--- a/_columns/The_Big_Picture/zh-cn/2024-11-20.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-20.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Shows More Strength, Pares Early Losses; Nvidia Slips Despite Strong Results	股市表现强劲，收复早期跌幅;尽管业绩强劲，但英伟达仍下滑
+  Stock Market Shows More Strength, Pares Early Losses; Nvidia Slips Despite Strong Results
 date: 2024-11-20 17:39 -0800
 author: KEN SHREVE
 ---
@@ -10,49 +10,41 @@ author: KEN SHREVE
 
 
 
-It wasn't looking good in the early going Wednesday as sellers initially knocked the Nasdaq composite lower by 1.4% on an intraday basis. There was no specific news to account for the downdraft, but it didn't matter. Stock market bulls won another battle as the Nasdaq pared early losses and closed with a deficit of just 0.1%.  
+It wasn't looking good in the early going Wednesday as sellers initially knocked the Nasdaq composite lower by 1.4% on an intraday basis. There was no specific news to account for the downdraft, but it didn't matter. Stock market bulls won another battle as the Nasdaq pared early losses and closed with a deficit of just 0.1%.
 
 
 
 
-Meanwhile, a weak earnings report from **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)) weighed on the S&P 500. But the index closed fractionally higher after falling nearly 1% intraday. Target slumped more than 20% after the retailer [missed on earnings and revenue](https://www.investors.com/news/target-earnings-walmart-tjx-q3-target-stock-tjx-stock/) and also gave a weak outlook.  
+Meanwhile, a weak earnings report from **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)) weighed on the S&P 500. But the index closed fractionally higher after falling nearly 1% intraday. Target slumped more than 20% after the retailer [missed on earnings and revenue](https://www.investors.com/news/target-earnings-walmart-tjx-q3-target-stock-tjx-stock/) and also gave a weak outlook.
 
 
-Target was already a laggard in the retail sector with a Relative Strength Rating of 58. Its weak report came one day after **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) reported strong results.  
+Target was already a laggard in the retail sector with a Relative Strength Rating of 58. Its weak report came one day after **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) reported strong results.
 
 
 Stock Market Today
 ------------------
 
 
-The Nasdaq and S&P 500 are both testing their 21-day lines, along with the Dow Jones Industrial Average and Russell 2000. The Dow Jones index added 0.3%, snapping a four-session slide. After reversing higher above its 21-day line Tuesday, the Russell 2000 edged higher by a fraction.  
+The Nasdaq and S&P 500 are both testing their 21-day lines, along with the Dow Jones Industrial Average and Russell 2000. The Dow Jones index added 0.3%, snapping a four-session slide. After reversing higher above its 21-day line Tuesday, the Russell 2000 edged higher by a fraction.
 
 
-Losers had a slight edge over winners on the New York Stock Exchange and Nasdaq exchange. Volume fell slightly from Tuesday.  
+Losers had a slight edge over winners on the New York Stock Exchange and Nasdaq exchange. Volume fell slightly from Tuesday.
 
 
-The 10-year Treasury yield faded off highs but still picked up 3 basis points to around 4.41%. After a strong move off lows, the 10-year yield continues to show strength as futures traders dial back rate-cut expectations. [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) now sees a 52% chance of another quarter-point cut at the December Federal Reserve meeting. That's down from 77% a month ago.  
+The 10-year Treasury yield faded off highs but still picked up 3 basis points to around 4.41%. After a strong move off lows, the 10-year yield continues to show strength as futures traders dial back rate-cut expectations. [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) now sees a 52% chance of another quarter-point cut at the December Federal Reserve meeting. That's down from 77% a month ago.
 
 
-While the Nasdaq and S&P 500 remain on uptrends, there are yellow flags to consider. For starters the number of new highs on the Nasdaq has started to flatten out while new lows increase. This comes as breadth has weakened in recent days.  
+While the Nasdaq and S&P 500 remain on uptrends, there are yellow flags to consider. For starters the number of new highs on the Nasdaq has started to flatten out while new lows increase. This comes as breadth has weakened in recent days.
 
 
 An Extreme Reading On Bulls
 ---------------------------
 
 
-Meanwhile, the latest weekly survey of stock market newsletter writers by Investors Intelligence showed bulls at 60% for the second straight week.  
+Meanwhile, the latest weekly survey of stock market newsletter writers by Investors Intelligence showed bulls at 60% for the second straight week.
 
 
-This is considered an extreme reading, and readings of 60% or more have been seen at or near several market tops in the past. It's a contrarian indicator, meaning when the crowd is leaning bullish, it's usually time to tread cautiously.  
-
-
-
-
----
-
-
-[**See Which Stocks Are In The Leaderboard Model Portfolio**](https://leaderboard.investors.com/#/) 
+This is considered an extreme reading, and readings of 60% or more have been seen at or near several market tops in the past. It's a contrarian indicator, meaning when the crowd is leaning bullish, it's usually time to tread cautiously.
 
 
 
@@ -60,56 +52,64 @@ This is considered an extreme reading, and readings of 60% or more have been see
 ---
 
 
-All that said, a large number of leading growth stocks continue to show strength and support after big price gains. While it's important to pay attention to yellow flags, it's also important to focus on the positives.  
+[**See Which Stocks Are In The Leaderboard Model Portfolio**](https://leaderboard.investors.com/#/)
 
 
-After the close, [Leaderboard](https://leaderboard.investors.com) stock **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) held up well after the [AI bellwether](https://www.investors.com/news/technology/nvidia-stock-nvda-fiscal-q3-2025-earnings/) reported another quarter of strong growth. Shares initially fell 4%, but Nvidia fought back and was down less than 1% around 2 p.m. ET.  
+
+
+---
+
+
+All that said, a large number of leading growth stocks continue to show strength and support after big price gains. While it's important to pay attention to yellow flags, it's also important to focus on the positives.
+
+
+After the close, [Leaderboard](https://leaderboard.investors.com) stock **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) held up well after the [AI bellwether](https://www.investors.com/news/technology/nvidia-stock-nvda-fiscal-q3-2025-earnings/) reported another quarter of strong growth. Shares initially fell 4%, but Nvidia fought back and was down less than 1% around 2 p.m. ET.
 
 
 Movers And Shakers
 ------------------
 
 
-Several growth stocks came under pressure in the [MarketSmith Growth 250](https://marketsmith.investors.com). Data center supplier and Leaderboard stock **Vertiv** ([VRT](https://research.investors.com/quote.aspx?symbol=VRT)) gave back 2.4%, but the decline didn't look so bad in light of Tuesday's strong gain. Shares rallied nearly 15% Tuesday on the heels of the company's investor presentation.  
+Several growth stocks came under pressure in the [MarketSmith Growth 250](https://marketsmith.investors.com). Data center supplier and Leaderboard stock **Vertiv** ([VRT](https://research.investors.com/quote.aspx?symbol=VRT)) gave back 2.4%, but the decline didn't look so bad in light of Tuesday's strong gain. Shares rallied nearly 15% Tuesday on the heels of the company's investor presentation.
 
 
-![](https://www.investors.com/wp-content/uploads/2024/11/MP112024.jpg)While several leading growth stocks continue to act well, buy prospects generally remain in short supply. Avoid the pitfall of chasing extended stocks.  
+![](https://www.investors.com/wp-content/uploads/2024/11/MP112024.jpg)While several leading growth stocks continue to act well, buy prospects generally remain in short supply. Avoid the pitfall of chasing extended stocks.
 
 
-The Leaderboard model portfolio did find two financial names Tuesday. **Tradeweb Markets** ([TW](https://research.investors.com/quote.aspx?symbol=TW)) cleared a trendline as it forms a flat base. The stock tried to break out Wednesday but early gains faded. Leaderboard also added asset manager **Blue Owl** ([OWL](https://research.investors.com/quote.aspx?symbol=OWL)). Blue Owl could have a flat base in place by the end of the week with a 24.17 entry.  
+The Leaderboard model portfolio did find two financial names Tuesday. **Tradeweb Markets** ([TW](https://research.investors.com/quote.aspx?symbol=TW)) cleared a trendline as it forms a flat base. The stock tried to break out Wednesday but early gains faded. Leaderboard also added asset manager **Blue Owl** ([OWL](https://research.investors.com/quote.aspx?symbol=OWL)). Blue Owl could have a flat base in place by the end of the week with a 24.17 entry.
 
 
-Elsewhere, after a setup day Tuesday, online pet retailer **Chewy** ([CHWY](https://research.investors.com/quote.aspx?symbol=CHWY)) gapped up and cleared an alternate handle entry of 34.19.  
+Elsewhere, after a setup day Tuesday, online pet retailer **Chewy** ([CHWY](https://research.investors.com/quote.aspx?symbol=CHWY)) gapped up and cleared an alternate handle entry of 34.19.
 
 
-While several top-rated growth stocks are bouncing off short-term support levels like the 10- and 21-day lines, many are not clear-cut buys. They might be add-on buys for a winning position, but they're riskier entries for a first-time buy.  
+While several top-rated growth stocks are bouncing off short-term support levels like the 10- and 21-day lines, many are not clear-cut buys. They might be add-on buys for a winning position, but they're riskier entries for a first-time buy.
 
 
-Take stock market leader **Twilio** ([TWLO](https://research.investors.com/quote.aspx?symbol=TWLO)). Those who bought Twilio's earnings gap on Oct. 31 have been rewarded. Current holders got an opportunity to add to add to their position Wednesday as Twilio found support at its 10-day line. New buyers, however, should sit tight and wait for a new base.  
+Take stock market leader **Twilio** ([TWLO](https://research.investors.com/quote.aspx?symbol=TWLO)). Those who bought Twilio's earnings gap on Oct. 31 have been rewarded. Current holders got an opportunity to add to add to their position Wednesday as Twilio found support at its 10-day line. New buyers, however, should sit tight and wait for a new base.
 
 
-[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_112024.pdf) 
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_112024.pdf)
 
 
-*Follow Ken Shreve on Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) for more stock market analysis and insight*.  
+*Follow Ken Shreve on Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) for more stock market analysis and insight*.
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE:**
 
 
-[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
+[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq) 
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
-[Futures: Nvidia Earnings Double; Is It Enough?](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-ceo-jensen-huang-nvidia-stock/) 
+[Futures: Nvidia Earnings Double; Is It Enough?](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-ceo-jensen-huang-nvidia-stock/)
 
 
 
